upload brenner's project to webgl

--- a/Group Exploration/Henry's Exploration/DragDrop/index.html
+++ b/Group Exploration/Henry's Exploration/DragDrop/index.html
@@ -8,5 +8,7 @@
   <body>
     <h1>Welcome!</h1>
     <iframe src="https://i.simmer.io/@henryaug/dragdrop" style="width:960px;height:600px"></iframe>
+
+    <h3><a href="brenner.html">Click here to see brenner's game</a></h3>
   </body>
 </html>
