adjust card category

--- a/Group Exploration/Henry's Exploration/Web Draft/docs.html
+++ b/Group Exploration/Henry's Exploration/Web Draft/docs.html
@@ -37,8 +37,8 @@
   </nav>
 
   <div id="cards">
-
-    <figure class="card card--normal">
+    <!-- CARD BLACK -->
+    <figure class="card card--black">
       <div class="card__image-container">
         <img src="logo.png" alt="Eevee" class="card__image">
       </div>
@@ -47,7 +47,7 @@
         <h1 class="card__name">Eevee</h1>
 
         <h3 class="card__type">
-          normal
+          Black
         </h3>
 
         <table class="card__stats">
@@ -65,19 +65,6 @@
               <th>Defense</th>
               <td>50</td>
             </tr>
-
-            <tr>
-              <th>Special Attack</th>
-              <td>45</td>
-            </tr>
-            <tr>
-              <th>Special Defense</th>
-              <td>65</td>
-            </tr>
-            <tr>
-              <th>Speed</th>
-              <td>55</td>
-            </tr>
           </tbody>
         </table>
 
@@ -93,17 +80,16 @@
         </div>
       </figcaption>
     </figure>
-
-    <figure class="card card--water">
+    <!-- CARD RED -->
+    <figure class="card card--red">
       <div class="card__image-container">
         <img src="logo.png" alt="Vaporeon" class="card__image">
       </div>
-
       <figcaption class="card__caption">
         <h1 class="card__name">Vaporeon</h1>
 
         <h3 class="card__type">
-          water
+          Red
         </h3>
 
         <table class="card__stats">
@@ -121,18 +107,48 @@
               <th>Defense</th>
               <td>60</td>
             </tr>
+          </tbody>
+        </table>
+
+        <div class="card__abilities">
+          <h4 class="card__ability">
+            <span class="card__label">Ability</span>
+            Absorb
+          </h4>
+          <h4 class="card__ability">
+            <span class="card__label">Hidden Ability</span>
+            Hydration
+          </h4>
+        </div>
+      </figcaption>
+    </figure>
+    <!-- CARD GREEN -->
+    <figure class="card card--green">
+      <div class="card__image-container">
+        <img src="logo.png" alt="Vaporeon" class="card__image">
+      </div>
+
+      <figcaption class="card__caption">
+        <h1 class="card__name">Vaporeon</h1>
+
+        <h3 class="card__type">
+          Green
+        </h3>
+
+        <table class="card__stats">
+          <tbody>
+            <tr>
+              <th>HP</th>
+              <td>130</td>
+            </tr>
+            <tr>
+              <th>Attack</th>
+              <td>65</td>
+            </tr>
 
             <tr>
-              <th>Special Attack</th>
-              <td>110</td>
-            </tr>
-            <tr>
-              <th>Special Defense</th>
-              <td>95</td>
-            </tr>
-            <tr>
-              <th>Speed</th>
-              <td>65</td>
+              <th>Defense</th>
+              <td>60</td>
             </tr>
           </tbody>
         </table>
@@ -149,6 +165,50 @@
         </div>
       </figcaption>
     </figure>
+    <!-- CARD WHITE -->
+    <figure class="card card--white">
+      <div class="card__image-container">
+        <img src="logo.png" alt="Vaporeon" class="card__image">
+      </div>
+
+      <figcaption class="card__caption">
+        <h1 class="card__name">Vaporeon</h1>
+
+        <h3 class="card__type">
+          White
+        </h3>
+
+        <table class="card__stats">
+          <tbody>
+            <tr>
+              <th>HP</th>
+              <td>130</td>
+            </tr>
+            <tr>
+              <th>Attack</th>
+              <td>65</td>
+            </tr>
+
+            <tr>
+              <th>Defense</th>
+              <td>60</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <div class="card__abilities">
+          <h4 class="card__ability">
+            <span class="card__label">Ability</span>
+            Absorb
+          </h4>
+          <h4 class="card__ability">
+            <span class="card__label">Hidden Ability</span>
+            Hydration
+          </h4>
+        </div>
+      </figcaption>
+    </figure>
+
   </div>
 
 
