--- a/Group Exploration/Henry's Exploration/Web Draft/index.html
+++ b/Group Exploration/Henry's Exploration/Web Draft/index.html
@@ -23,10 +23,10 @@
               <a class="nav-link active" aria-current="page" href="#">Play</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="docs.html">Docs</a>
+              <a class="nav-link" href="rules.html">Rules</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="mailto:example@example.com">Contact Us</a>
+              <a class="nav-link" href="cards.html">Cards</a>
             </li>
           </ul>
         </div>
