--- a/Group Exploration/Henry's Exploration/Web Draft/cards.html
+++ b/Group Exploration/Henry's Exploration/Web Draft/cards.html
@@ -26,10 +26,10 @@
             <a class="nav-link" href="index.html">Play</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="docs.html">Docs</a>
+            <a class="nav-link" href="rules.html">Rules</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="mailto:example@example.com">Contact Us</a>
+            <a class="nav-link active" href="#">Cards</a>
           </li>
         </ul>
       </div>
@@ -44,7 +44,7 @@
       </div>
 
       <figcaption class="card__caption">
-        <h1 class="card__name">Eevee</h1>
+        <h1 class="card__name">John</h1>
 
         <h3 class="card__type">
           Black
@@ -73,10 +73,6 @@
             <span class="card__label">Ability</span>
             Run Away
           </h4>
-          <h4 class="card__ability">
-            <span class="card__label">Hidden Ability</span>
-            Anticipation
-          </h4>
         </div>
       </figcaption>
     </figure>
@@ -86,7 +82,7 @@
         <img src="logo.png" alt="Vaporeon" class="card__image">
       </div>
       <figcaption class="card__caption">
-        <h1 class="card__name">Vaporeon</h1>
+        <h1 class="card__name">Doe</h1>
 
         <h3 class="card__type">
           Red
@@ -113,11 +109,7 @@
         <div class="card__abilities">
           <h4 class="card__ability">
             <span class="card__label">Ability</span>
-            Absorb
-          </h4>
-          <h4 class="card__ability">
-            <span class="card__label">Hidden Ability</span>
-            Hydration
+            Shield
           </h4>
         </div>
       </figcaption>
@@ -129,7 +121,7 @@
       </div>
 
       <figcaption class="card__caption">
-        <h1 class="card__name">Vaporeon</h1>
+        <h1 class="card__name">Lorem</h1>
 
         <h3 class="card__type">
           Green
@@ -156,11 +148,7 @@
         <div class="card__abilities">
           <h4 class="card__ability">
             <span class="card__label">Ability</span>
-            Absorb
-          </h4>
-          <h4 class="card__ability">
-            <span class="card__label">Hidden Ability</span>
-            Hydration
+            Camoflauge
           </h4>
         </div>
       </figcaption>
@@ -172,7 +160,7 @@
       </div>
 
       <figcaption class="card__caption">
-        <h1 class="card__name">Vaporeon</h1>
+        <h1 class="card__name">Arial</h1>
 
         <h3 class="card__type">
           White
@@ -199,11 +187,7 @@
         <div class="card__abilities">
           <h4 class="card__ability">
             <span class="card__label">Ability</span>
-            Absorb
-          </h4>
-          <h4 class="card__ability">
-            <span class="card__label">Hidden Ability</span>
-            Hydration
+            Dodge
           </h4>
         </div>
       </figcaption>
