--- a/Group Exploration/Henry's Exploration/Web Draft/cardMenu.html
+++ b/Group Exploration/Henry's Exploration/Web Draft/cardMenu.html
@@ -41,7 +41,7 @@
       Pick your deck!
     </h1>
     <div class="buttons-container">
-      <button class="red-team-button">
+      <button class="red-team-button" onclick="window.location.href='cards.html'">
         RED
       </button>
       <button class="black-team-button">
