--- a/Group Exploration/Henry's Exploration/Web Draft/cards.html
+++ b/Group Exploration/Henry's Exploration/Web Draft/cards.html
@@ -38,7 +38,7 @@
 
   <div id="cards">
     <!-- CARD BLACK -->
-    <figure class="card card--black">
+    <figure class="card card--red">
       <div class="card__image-container">
         <img src="logo.png" alt="Eevee" class="card__image">
       </div>
@@ -115,7 +115,7 @@
       </figcaption>
     </figure>
     <!-- CARD GREEN -->
-    <figure class="card card--green">
+    <figure class="card card--red">
       <div class="card__image-container">
         <img src="logo.png" alt="Vaporeon" class="card__image">
       </div>
@@ -154,7 +154,7 @@
       </figcaption>
     </figure>
     <!-- CARD WHITE -->
-    <figure class="card card--white">
+    <figure class="card card--red">
       <div class="card__image-container">
         <img src="logo.png" alt="Vaporeon" class="card__image">
       </div>
