--- a/Group Exploration/Henry's Exploration/Web Draft/rules.html
+++ b/Group Exploration/Henry's Exploration/Web Draft/rules.html
@@ -26,7 +26,7 @@
               <a class="nav-link active" href="#">Rules</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="cards.html">Cards</a>
+              <a class="nav-link" href="cardMenu.html">Cards</a>
             </li>
           </ul>
         </div>
