--- a/Group Exploration/Henry's Exploration/Web Draft/index.html
+++ b/Group Exploration/Henry's Exploration/Web Draft/index.html
@@ -34,7 +34,7 @@
     </nav>
 
     <div class="game-container">
-      <iframe src="https://i.simmer.io/@henryaug/menu" style="width:960px;height:600px"></iframe>
+      <iframe src="https://i.simmer.io/@dk2706/democcg-v1" style="width:960px;height:600px"></iframe>
     </div>
   </body>
 </html>
